# GreyEngine

./: Cargo.toml  README.md
assets/: README.md
examples/: my_game.rs  simple.rs
src/: lib.rs  main.rs
src/assets/: mod.rs
src/core/: mod.rs
src/ecs/: mod.rs
src/input/: keyboard.rs  mod.rs
src/math/: mod.rs
src/platform/: mod.rs
src/render/: app.rs  camera.rs  context.rs  mod.rs  pipeline.rs  renderer2d.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/scene/: mod.rs
